	PR middle-end/83718 	* tree-inline.c (copy_cfg_body): Adjust num&den for scaling 	after they are computed. 	* g++.dg/torture/pr83718.C: New testcase.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@256544 138bc75d-0d04-0410-961f-82ee72b054a4